--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@ionic-native/camera": "^5.32.1",
+    "@ionic-native/core": "^5.32.1",
     "@ionic/angular": "^5.5.2",
     "cordova-android": "^8.1.0",
+    "cordova-plugin-camera": "^4.1.0",
     "firebase": "^8.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -74,7 +77,10 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android"
