--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@ionic-native/barcode-scanner": "^5.32.1",
     "@ionic-native/camera": "^5.32.1",
     "@ionic-native/core": "^5.32.1",
     "@ionic/angular": "^5.5.2",
     "cordova-android": "^8.1.0",
     "cordova-plugin-camera": "^4.1.0",
     "firebase": "^8.4.3",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -79,6 +81,9 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       }
     },
